fix alignments in finale

--- a/styles.css
+++ b/styles.css
@@ -106,5 +106,5 @@ canvas:first-child {
   border-radius: 8px;
   background: gray;
   top: 100px;
-  left: 250px;
+  left: 125px;
 }
